# aoc24

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  flake.nix  pyproject.toml
aoc24/: app.py  tools.py
aoc24/01_1/: challenge.py  test_challenge.py
aoc24/01_2/: challenge.py  test_challenge.py
aoc24/02_1/: challenge.py  test_challenge.py
aoc24/02_2/: challenge.py  test_challenge.py
aoc24/03_1/: challenge.py  test_challenge.py
aoc24/03_2/: challenge.py  test_challenge.py
aoc24/04_1/: challenge.py  test_challenge.py
aoc24/04_2/: challenge.py  test_challenge.py
aoc24/05_1/: challenge.py  test_challenge.py
aoc24/05_2/: challenge.py  test_challenge.py
aoc24/06_1/: challenge.py  test_challenge.py
aoc24/06_2/: challenge.py  test_challenge.py
aoc24/07_1/: challenge.py  test_challenge.py
aoc24/07_2/: challenge.py  test_challenge.py
aoc24/08_1/: challenge.py  test_challenge.py
aoc24/08_2/: challenge.py  test_challenge.py
aoc24/09_1/: challenge.py  test_challenge.py
aoc24/09_2/: challenge.py  test_challenge.py
aoc24/10_1/: challenge.py  test_challenge.py
aoc24/10_2/: challenge.py  test_challenge.py
aoc24/11_1/: challenge.py
aoc24/11_2/: challenge.py  test_challenge.py
aoc24/12_1/: challenge.py  test_challenge.py
aoc24/13_1/: challenge.py  test_challenge.py
aoc24/13_2/: challenge.py  test_challenge.py
aoc24/14_1/: challenge.py
aoc24/14_2/: challenge.py  test_challenge.py
aoc24/15_1/: challenge.py  test_challenge.py
aoc24/15_2/: challenge.py  test_challenge.py
aoc24/16_1/: challenge.py  test_challenge.py
(+24 files in other folders)
